force-app/main/default/objects/RE_Pricing_Input_STG__c/RE_Pricing_Input_STG__c.object-meta.xml
<CustomObject>
    <label>RE Pricing Input STG</label>
    <nameField>
        <displayFormat>RPI-{0000000000}</displayFormat>
        <label>Pricing Input STG Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RE Pricing Input STG</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>