force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_CND_Brand_Indicator__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Brand_Indicator__c</fullName>
    <label>Brand Indicator</label>
    <length>5</length>
    <type>Text</type>
</CustomField>