force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_CND_City_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_City_Code__c</fullName>
    <label>City Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>