force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_CND_Move_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Move_Date__c</fullName>
    <label>Move Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>