force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_CND_Move_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Move_Value__c</fullName>
    <label>Move Value</label>
    <length>18</length>
    <type>Text</type>
</CustomField>