force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_CND_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Product_Group__c</fullName>
    <label>Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>