force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_CND_Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Quote_Name__c</fullName>
    <label>Quote Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>