force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_CND_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Supplier_Name__c</fullName>
    <label>Supplier Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>