force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>RE_Default_Currency__c</fullName>
    <label>Default Currency</label>
    <length>15</length>
    <type>Text</type>
</CustomField>