force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>