force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_GPCAmnt__c.field-meta.xml
<CustomField>
    <fullName>RE_GPCAmnt__c</fullName>
    <label>GPCAmnt</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>