force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>RE_Is_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Processed?</label>
    <type>Checkbox</type>
</CustomField>