force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_Material__c.field-meta.xml
<CustomField>
    <fullName>RE_Material__c</fullName>
    <description>Material number will be mentioned in the field</description>
    <label>Material</label>
    <length>20</length>
    <type>Text</type>
</CustomField>