force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_Plant__c.field-meta.xml
<CustomField>
    <fullName>RE_Plant__c</fullName>
    <description>Plant number will be present in this field</description>
    <label>Plant</label>
    <length>10</length>
    <type>Text</type>
</CustomField>