force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_Quote_Source__c.field-meta.xml
<CustomField>
    <fullName>RE_Quote_Source__c</fullName>
    <label>Quote Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>