force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Quote_Type__c</fullName>
    <label>Quote Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>