force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_SoldTo__c.field-meta.xml
<CustomField>
    <fullName>RE_SoldTo__c</fullName>
    <label>SoldTo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>