force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>