force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>RE_Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <length>10</length>
    <type>Text</type>
</CustomField>