force-app/main/default/objects/RE_Pricing_Input_STG__c/fields/RE_Validity_Month__c.field-meta.xml
<CustomField>
    <fullName>RE_Validity_Month__c</fullName>
    <label>Validity Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>