force-app/main/default/objects/RE_Pricing_Input_STG__c/recordTypes/Canada_Competitor.recordType-meta.xml
<RecordType>
    <fullName>Canada_Competitor</fullName>
    <active>true</active>
    <description>Record type for Revolution Canada Daily Racks Raw Early Upload</description>
    <label>Canada Competitor</label>
</RecordType>