force-app/main/default/objects/RE_Pricing_Input_STG__c/recordTypes/Canada_OPIS_Spot_Ticker.recordType-meta.xml
<RecordType>
    <fullName>Canada_OPIS_Spot_Ticker</fullName>
    <active>true</active>
    <description>Record type for Revolution Canada OPIS Spot Ticker Upload</description>
    <label>Canada OPIS Spot Ticker</label>
</RecordType>