force-app/main/default/objects/RE_Pricing_Input_STG__c/recordTypes/GPC_Data.recordType-meta.xml
<RecordType>
    <fullName>GPC_Data</fullName>
    <active>true</active>
    <description>Record type for Revolution East GPC data upload</description>
    <label>GPC_Data</label>
</RecordType>