force-app/main/default/objects/RE_Pricing_Input_STG__c/recordTypes/RPG_Data.recordType-meta.xml
<RecordType>
    <fullName>RPG_Data</fullName>
    <active>true</active>
    <description>Record type for Revolution East RPG data upload</description>
    <label>RPG_Data</label>
</RecordType>