force-app/main/default/objects/RE_Pricing_Input_STG__c/recordTypes/Tier_Data.recordType-meta.xml
<RecordType>
    <fullName>Tier_Data</fullName>
    <active>true</active>
    <description>Record type for Revolution East Tier data upload</description>
    <label>Tier_Data</label>
</RecordType>