force-app/main/default/objects/RE_Pricing_Input_STG__c/listViews/Canada_OPIS_Spot_Ticker_STG.listView-meta.xml
<ListView>
    <fullName>Canada_OPIS_Spot_Ticker_STG</fullName>
    <columns>NAME</columns>
    <columns>RE_Pricing_Date__c</columns>
    <columns>RE_CND_Quote_Name__c</columns>
    <columns>RE_Validity_Month__c</columns>
    <columns>RE_Price__c</columns>
    <columns>RE_Default_Currency__c</columns>
    <columns>RE_Unit_of_Measure__c</columns>
    <columns>RE_Default_Per_Unit__c</columns>
    <columns>RE_Quote_Source__c</columns>
    <columns>RE_Quote_Type__c</columns>
    <columns>RE_Is_Processed__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Pricing_Input_STG__c.Canada_OPIS_Spot_Ticker</value>
    </filters>
    <label>Canada OPIS Spot Ticker STG</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Canada</territoryAndSubordinates>
    </sharedTo>
</ListView>